# nested_bracket_problem

./: README.md  big_strings.yaml  create_nested_strings.py  mypy.ini  pyproject.toml  strings.yaml
questions/: question_1.py
tests/: conftest.py  test_question_1.py
tests/unit/: test_question_1.py
