[tool.poetry]
name = "informetis_tech_exam"
version = "0.1.0"
description = "Parse a string with nested brackets"
authors = ["Ian Vermes <ian.vermes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.770"
ipython = "^7.13.0"
pytest = "^5.4.1"
pyyaml = "^5.3.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
